--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -11,6 +11,10 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
+env:
+  # 统一设置镜像名称，方便修改
+  IMAGE_NAME: node1975
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,6 +25,13 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      # [新增步骤] 强制将用户名转为小写，防止 Docker 报错
+      - name: Lowercase owner name
+        run: |
+          echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
+        env:
+          OWNER: '${{ github.repository_owner }}'
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
@@ -36,10 +47,13 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: true
+          # [修改逻辑] 只有非 PR 事件才推送，PR 只构建不推送
+          push: ${{ github.event_name != 'pull_request' }}
           platforms: linux/amd64,linux/arm64
+          # 使用转换后的小写用户名
           tags: |
-            ghcr.io/${{ github.repository_owner }}/node1975:latest
+            ghcr.io/${{ env.OWNER_LC }}/${{ env.IMAGE_NAME }}:latest
+            ghcr.io/${{ env.OWNER_LC }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
             org.opencontainers.image.description=HTTP Server
